--- a/localisation/dec1_countries_l_english.yml
+++ b/localisation/dec1_countries_l_english.yml
@@ -32,7 +32,7 @@
  IMA_ADJ: "Italian"
  LVE: "Lombardy-Venetia"
  LVE_ADJ: "Lombardo-Venetian"
- IBE: "Iberian Empire"
+ IBE: "Iberian Union"
  IBE_ADJ: "Iberian"
  BTC: "Baltic Union"
  BTC_ADJ: "Baltic"
