--- a/localisation/dec1_ideas_l_english.yml
+++ b/localisation/dec1_ideas_l_english.yml
@@ -91,6 +91,40 @@
  AGU_ideas: "Anglo-Dutch Union Ideas"
  AGU_ideas_start: "Anglo-Dutch Union Traditions"
  AGU_ideas_bonus: "Anglo-Dutch Bonus"
+ AGU_multicultural_union: "Multi-Cultural Union"
+ AGU_multicultural_union_desc: "§RDescription Available in 4.1.0§!"
+ AGU_control_of_economic_centers: "Control of Economic Centers"
+ AGU_control_of_economic_centers_desc: "§RDescription Available in 4.1.0§!"
+ AGU_colonial_ambitions: "Colonial Ambitions"
+ AGU_colonial_ambitions_desc: "§RDescription Available in 4.1.0§!"
+ AGU_global_trade_power: "Global Trade Power"
+ AGU_global_trade_power_desc: "§RDescription Available in 4.1.0§!"
+ AGU_influx_of_merchants: "Influx of Merchants"
+ AGU_influx_of_merchants_desc: "§RDescription Available in 4.1.0§!"
+ AGU_naval_control: "Naval Control"
+ AGU_naval_control_desc: "§RDescription Available in 4.1.0§!"
+ AGU_tax_the_poor: "Tax the Poor"
+ AGU_tax_the_poor_desc: "§RDescription Available in 4.1.0§!"
+
+ # Angevin Empire
+
+ ANG_ideas: "Angevin Empire Ideas"
+ ANG_ideas: "Angevin Empire Traditions"
+ ANG_ideas: "The Angevin Empire"
+ ANG_nation_of_many_cultures: "Nation of Many Cultures"
+ ANG_nation_of_many_cultures_desc: "§RDescription Available in 4.1.0§!"
+ ANG_unified_the_crown: "Unified the Crown"
+ ANG_unified_the_crown_desc: "§RDescription Available in 4.1.0§!"
+ ANG_english_channel_domination: "English Channel Domination"
+ ANG_english_channel_domination_desc: "§RDescription Available in 4.1.0§!"
+ ANG_anglo_french_tactics: "Anglo-French Tactics"
+ ANG_anglo_french_tactics_desc: "§RDescription Available in 4.1.0§!"
+ ANG_united_kingdoms_together: "United Kingdoms Together"
+ ANG_united_kingdoms_together_desc: "§RDescription Available in 4.1.0§!"
+ ANG_anglo_french_armada: "Armada of Union"
+ ANG_anglo_french_armada_desc: "§RDescription Available in 4.1.0§!"
+ ANG_franco_bastions: "French Bastions"
+ ANG_franco_bastions_desc: "§RDescription Available in 4.1.0§!"
 
  # Arabian Kingdom
 
@@ -129,6 +163,24 @@
  ARN_ayrudzi_cavalry_desc: "§RDescription Available in 4.1.0§!"
  ARN_proper_coinage: "Proper Coinage"
  ARN_proper_coinage_desc: "§RDescription Available in 4.1.0§!"
+
+ ARR_ideas: "Armenian Republic Ideas"
+ ARR_ideas_start: "Amernian Republic Traditions"
+ ARR_ideas_bonus: "Republic of Armenia"
+ ARR_our_history: "Our History"
+ ARR_our_history_desc: "§RDescription Available in 4.1.0§!"
+ ARR_resistance_to_turkish_influence: "Resistance to Turkish Influence"
+ ARR_resistance_to_turkish_influence_desc: "§RDescription Available in 4.1.0§!"
+ ARR_far_christianity: "Far Christianity"
+ ARR_far_christianity_desc: "§RDescription Available in 4.1.0§!"
+ ARR_republican_values: "Republican Values"
+ ARR_republican_values_desc: "§RDescription Available in 4.1.0§!"
+ ARR_greater_armenian_legacy: "Greater Armenian Legacy"
+ ARR_greater_armenian_legacy_desc: "§RDescription Available in 4.1.0§!"
+ ARR_reform_the_national_assembly: "Reform the National Assembly"
+ ARR_reform_the_national_assembly_desc: "§RDescription Available in 4.1.0§!"
+ ARR_ssr_peoples: "SSR People's"
+ ARR_ssr_peoples_desc: "§RDescription Available in 4.1.0§!"
 
  AHE_ideas: "Austro-Hungarian Ideas"
  AHE_ideas_start: "Austro-Hungarian Traditions"
@@ -255,6 +307,24 @@
  BSK_naval_preparations_desc: "§RDescription Available in 4.1.0§!"
  BSK_cavalry_improvments: "Cavalry Improvements"
  BSK_cavalry_improvments_desc: "§RDescription Available in 4.1.0§!"
+
+ BNL_ideas: "Benelux Ideas"
+ BNL_ideas_start: "Benelux Traditions"
+ BNL_ideas_bonus: "Benelux Union"
+ BNL_enact_emergency_measures: "Enact Emergency Measures"
+ BNL_enact_emergency_measures_desc: "§RDescription Available in 4.1.0§!"
+ BNL_anti_piracy_warfare: "Anti-Piracy Warfare"
+ BNL_anti_piracy_warfare_desc: "§RDescription Available in 4.1.0§!"
+ BNL_politico_economic_union: "Political-Economic Unon"
+ BNL_politico_economic_union_desc: "§RDescription Available in 4.1.0§!"
+ BNL_alliances_of_europe: "Alliances of Europe"
+ BNL_alliances_of_europe_desc: "§RDescription Available in 4.1.0§!"
+ BNL_german_merceneries: "German Merceneries"
+ BNL_german_merceneries_desc: "§RDescription Available in 4.1.0§!"
+ BNL_install_new_generals: "Install New Generals"
+ BNL_install_new_generals_desc: "§RDescription Available in 4.1.0§!"
+ BNL_purge_the_lower_classes: "Purge the Lower Classes"
+ BNL_purge_the_lower_classes_desc: "§RDescription Available in 4.1.0§!"
 
  BRP_ideas: "Brandenburg-Prussia Ideas"
  BRP_ideas_start: "Brandenburg-Prussia Traditions"
@@ -437,28 +507,112 @@
  CZE_insulting_history_desc: "§RDescription Available in 4.1.0§!"
 
  DCP_ideas: "Ducal Prussia Ideas"
- DCP_start: ""
- DCP_bonus: ""
+ DCP_start: "Ducal Prussia Traditions"
+ DCP_bonus: "The Duchy of Prussia"
+ DCP_prussian_homage: "Prussian Homage"
+ DCP_prussian_homage_desc: "§RDescription Available in 4.1.0§!"
+ DCP_abandonment_of_the_order: "Abondonment of the Order"
+ DCP_abandonment_of_the_order_desc: "§RDescription Available in 4.1.0§!"
+ DCP_rightful_duke_of_prussia: "Rightful Duke of Prussia"
+ DCP_rightful_duke_of_prussia_desc: "§RDescription Available in 4.1.0§!"
+ DCP_legacy_of_duke_albert: "Legacy of Duke Albert"
+ DCP_legacy_of_duke_albert_desc: "§RDescription Available in 4.1.0§!"
+ DCP_dynastic_failiure: "Dynastic Failiure"
+ DCP_dynastic_failiure_desc: "§RDescription Available in 4.1.0§!"
+ DCP_power_of_the_bishops: "Power of the Bishops"
+ DCP_power_of_the_bishops_desc: "§RDescription Available in 4.1.0§!"
+ DCP_preparation_the_troops: "Prepare The Army"
+ DCP_preparation_the_troops_desc: "§RDescription Available in 4.1.0§!"
 
  EPR_ideas: "East Prussia Ideas"
- EPR_start: ""
- EPR_bonus: ""
+ EPR_start: "East Prussia Traditions"
+ EPR_bonus: "Eastern Prussia"
+ EPR_our_own_kingdom: "Our Own Kingdom"
+ EPR_our_own_kingdom_desc: "§RDescription Available in 4.1.0§!"
+ EPR_the_peace_of_thorn: "The Peace of Thorn"
+ EPR_the_peace_of_thorn_desc: "§RDescription Available in 4.1.0§!"
+ EPR_cultural_hegemon: "Cultural Hegemon"
+ EPR_cultural_hegemon_desc: "§RDescription Available in 4.1.0§!"
+ EPR_dynastic_marriages: "Dynastic Marriages"
+ EPR_dynastic_marriages_desc: "§RDescription Available in 4.1.0§!"
+ EPR_land_warfare: "Land Warfare"
+ EPR_land_warfare_desc: "§RDescription Available in 4.1.0§!"
+ EPR_the_national_cause: "The National Cause"
+ EPR_the_national_cause_desc: "§RDescription Available in 4.1.0§!"
+ EPR_state_armies: "State Armies"
+ EPR_state_armies_desc: "§RDescription Available in 4.1.0§!"
 
  ERO_ideas: "Emilia-Romagna Ideas"
- ERO_start: ""
- ERO_bonus: ""
+ ERO_start: "Emilia-Romagna Traditions"
+ ERO_bonus: "Emilia-Romagna"
+ ERO_these_united_kingdoms: "These United Kingdoms"
+ ERO_these_united_kingdoms_desc: "§RDescription Available in 4.1.0§!"
+ ERO_hired_economic_reformers: "Hired Economic Reformers"
+ ERO_hired_economic_reformers_desc: "§RDescription Available in 4.1.0§!"
+ ERO_protect_the_commonfolk: "Protect the Commonfolk"
+ ERO_protect_the_commonfolk_desc: "§RDescription Available in 4.1.0§!"
+ ERO_religious_authority: "Religious Authority"
+ ERO_religious_authority_desc: "§RDescription Available in 4.1.0§!"
+ ERO_trade_control: "Trade Control"
+ ERO_trade_control_desc: "§RDescription Available in 4.1.0§!"
+ ERO_control_of_the_vassals: "Control of the Vassals"
+ ERO_control_of_the_vassals_desc: "§RDescription Available in 4.1.0§!"
+ ERO_war_in_italy: "War in Italy"
+ ERO_war_in_italy_desc: "§RDescription Available in 4.1.0§!"
 
  EUR_ideas: "European Union Ideas"
- EUR_start: ""
- EUR_bonus: ""
+ EUR_start: "European Union Traditions"
+ EUR_bonus: "The European Union"
+ EUR_european_technologies: "European Technologies"
+ EUR_european_technologies_desc: "§RDescription Available in 4.1.0§!"
+ EUR_the_union_fleet: "The Union Fleet"
+ EUR_the_union_fleet_desc: "§RDescription Available in 4.1.0§!"
+ EUR_annexation_through_diplomacy: "Annexation Through Diplomacy"
+ EUR_annexation_through_diplomacy_desc: "§RDescription Available in 4.1.0§!"
+ EUR_governing_the_union: "Governing The Union"
+ EUR_governing_the_union_desc: "§RDescription Available in 4.1.0§!"
+ EUR_unified_states: "Unified States of Europe"
+ EUR_unified_states_desc: "§RDescription Available in 4.1.0§!"
+ EUR_europe_military_police: "Europe Military Police"
+ EUR_europe_military_police_desc: "§RDescription Available in 4.1.0§!"
+ EUR_expansionism_policies: "Expansionism Policies"
+ EUR_expansionism_policies_desc: "§RDescription Available in 4.1.0§!"
 
- FIB_ideas: "Franco-Iberian Empire Ideas"
- FIB_start: ""
- FIB_bonus: ""
+ FIB_ideas: "Franco-Iberia Ideas"
+ FIB_start: "Franco-Iberia Traditions"
+ FIB_bonus: "Franco-Iberia"
+ FIB_cultural_unity: "Cultural Unity"
+ FIB_cultural_unity_desc: "§RDescription Available in 4.1.0§!"
+ FIB_heavy_fleet_of_the_seas: "Heavy Fleet of the Seas"
+ FIB_heavy_fleet_of_the_seas_desc: "§RDescription Available in 4.1.0§!"
+ FIB_european_ramparts: "European Ramparts"
+ FIB_european_ramparts_desc: "§RDescription Available in 4.1.0§!"
+ FIB_proper_leaders_from_england: "Proper Leadership from England"
+ FIB_proper_leaders_from_england_desc: "§RDescription Available in 4.1.0§!"
+ FIB_the_economic_union: "The Economic Union"
+ FIB_the_economic_union_desc: "§RDescription Available in 4.1.0§!"
+ FIB_monarch_leadership: "Monarch Leadership"
+ FIB_monarch_leadership_desc: "§RDescription Available in 4.1.0§!"
+ FIB_franco_spies: "Franco Spies"
+ FIB_franco_spies_desc: "§RDescription Available in 4.1.0§!"
 
  FRC_ideas: "Franconia Ideas"
- FRC_start: ""
- FRC_bonus: ""
+ FRC_start: "Franconia Traditions"
+ FRC_bonus: "Franconia"
+ FRC_franconia_religious_authority: "Franconian Religious Authority"
+ FRC_franconia_religious_authority_desc: "§RDescription Available in 4.1.0§!"
+ FRC_control_over_cultural_law: "Control Over Cultural Law"
+ FRC_control_over_cultural_law_desc: "§RDescription Available in 4.1.0§!"
+ FRC_franconian_nobility: "Franconian Nobility"
+ FRC_franconian_nobility_desc: "§RDescription Available in 4.1.0§!"
+ FRC_the_kingdom_of_francs: "The Kingdom of Francs"
+ FRC_the_kingdom_of_francs_desc: "§RDescription Available in 4.1.0§!"
+ FRC_reduce_garrison_taxation: "Reduce Garrison Taxation"
+ FRC_reduce_garrison_taxation_desc: "§RDescription Available in 4.1.0§!"
+ FRC_reform_the_army: "Reform the Armies"
+ FRC_reform_the_army_desc: "§RDescription Available in 4.1.0§!"
+ FRC_merchants_of_germania: "Merchants of Germania"
+ FRC_merchants_of_germania_desc: "§RDescription Available in 4.1.0§!"
 
  FRE_ideas: "French Empire Ideas"
  FRE_start: ""
@@ -497,8 +651,22 @@
  IMA_bonus: ""
 
  JAE_ideas: "Empire of Japan Ideas"
- JAE_start: ""
- JAE_bonus: ""
+ JAE_start: "Empire of Japan Traditions"
+ JAE_bonus: "The Empire of Japan"
+ JAE_dissolution_of_the_shogunate: "Dissolution of the Shogunate"
+ JAE_dissolution_of_the_shogunate_desc: "§RDescription Available in 4.1.0§!"
+ JAE_meiji_restoration: "The Meiji Restoration"
+ JAE_meiji_restoration_desc: "§RDescription Available in 4.1.0§!"
+ JAE_imperial_policy: "Imperial Policies"
+ JAE_imperial_policy_desc: "§RDescription Available in 4.1.0§!"
+ JAE_war_torn_country: "War-Torn Countryside"
+ JAE_war_torn_country_desc: "§RDescription Available in 4.1.0§!"
+ JAE_united_armies_of_japan: "United Armies of Japan"
+ JAE_united_armies_of_japan_desc: "§RDescription Available in 4.1.0§!"
+ JAE_protect_isolation_policies: "Protect Isolation Policies"
+ JAE_protect_isolation_policies_desc: "§RDescription Available in 4.1.0§!"
+ JAE_the_japanese_navy: "The Japanese Navy"
+ JAE_the_japanese_navy_desc: "§RDescription Available in 4.1.0§!"
 
  JGE_ideas: "Jagiellonian Empire Ideas"
  JGE_start: ""
@@ -509,8 +677,22 @@
  KOG_bonus: ""
 
  KRV_ideas: "Kievan Rus Ideas"
- KRV_start: ""
- KRV_bonus: ""
+ KRV_start: "Kievan Rus Traditions"
+ KRV_bonus: "Kievan Rus"
+ KRV_reduced_liberty_desire: "Rein In The Tribes"
+ KRV_reduced_liberty_desire_desc: "§RDescription Available in 4.1.0§!"
+ KRV_global_missionary_strenght: "Our Northern Crusade"
+ KRV_global_missionary_strenght_desc: "§RDescription Available in 4.1.0§!"
+ KRV_cavalry_fire: "The Cossacks Ride With Us"
+ KRV_cavalry_fire_desc: "§RDescription Available in 4.1.0§!"
+ KRV_heavy_global_tax_reform: "Restablishing Our Trade Hub In Kyiv"
+ KRV_heavy_global_tax_reform_desc: "§RDescription Available in 4.1.0§!"
+ KRV_war_score_cost_vs_other_religion: "Our Time Of Reckoning Has Come"
+ KRV_war_score_cost_vs_other_religion_desc: "§RDescription Available in 4.1.0§!"
+ KRV_heir_chance: "Bring Forth The Women As Vladimir Once Did"
+ KRV_heir_chance_desc: "§RDescription Available in 4.1.0§!"
+ KRV_defensiveness: "The Forest, It Speak Slavonic"
+ KRV_defensiveness_desc: "§RDescription Available in 4.1.0§!"
 
  LVE_ideas: "Lombardy–Venetia Ideas"
  LVE_start: ""
