--- a/localisation/dec1_tooltips_l_english.yml
+++ b/localisation/dec1_tooltips_l_english.yml
@@ -351,6 +351,8 @@
  form_anglo_dutch_union_tt_4: "Country gains a permanent claim on §YLow Countries§! region."
 
  form_empire_of_japan_tt_2: "Country obtains §YEmpire of Japan§! missions."
+ form_empire_of_japan_tt_3: "Country gains a permanent claim on §YKorea§! region."
+ form_empire_of_japan_tt_4: "Country gains a permanent claim on §YManchuria§! region."
 
  form_kievan_rus_tt_2: "Country obtains §YKievan Rus§! missions."
 
