--- a/localisation/dec1_decisions_l_english.yml
+++ b/localisation/dec1_decisions_l_english.yml
@@ -96,6 +96,9 @@
  czechoslovakia_nation_title: "@CZE Unite Czechoslovakia"
  czechoslovakia_nation_desc: "The First Czechoslovak Republic, often called The First Republic was the Czechoslovak state that existed from 1918 to 1938. The state was commonly called Czechoslovakia. It was composed of Bohemia, Moravia, Czech Silesia, Slovakia and Subcarpathian Ruthenia."
 
+ ducal_prussia_nation_title: "@DCP Ducal Prussia"
+ ducal_prussia_nation_desc: "The Duchy of Prussia also known as 'Ducal Prussia' was a duchy in the region of Prussia established as a result of secularization of the Teutonic Order during the Protestant Reformation in 1525."
+
  east_prussia_nation_title: "@EPR Foundation of Eastern Prussia"
  east_prussia_nation_desc: "Its capital city was Königsberg. East Prussia was the main part of the region of Prussia along the southeastern Baltic Coast. The bulk of the ancestral lands of the Baltic Old Prussians were enclosed within East Prussia."
 
