--- a/localisation/dec1_events_l_english.yml
+++ b/localisation/dec1_events_l_english.yml
@@ -31,7 +31,7 @@
  # Customs Missions Event
 
  dec1_events.3.t: "New Missions & Objectives"
- dec1_events.3.d: "Our state is going through a range of changes that is rapidly reforming our government and political objectives. Unless we invest our time in these goals; they will remain the same without any progress to our power projection."
+ dec1_events.3.d: "Our state is going through a range of changes that is rapidly reforming our government and political objectives. Unless we invest our time in these goals; they will remain the same without any progress to our power projection.\n\nDeveloper Note: §RNew Missions are not included yet! Apologies :( Soon though!§!\n\n§Gif you wish to support me for faster development; please follow me via Patreon!\nAny support helps me out insanely and allow you direct access to update information and contact with me if you so wish.\nAll donations go directly to savings and help me focus more on my projects as a proper committment/job as I cannot properly get one.\n\nThank you for subscribing to Formable Nations: Reworked!\nI truly hope you enjoy it, please leave me feedback if you have any!§!\n\nThis message will be removed when Custom Missions are completed."
  dec1_events.3.a: "Yes, Please!"
  dec1_events.3.b: "No, we cannot abandon our roots."
 
