--- a/localisation/dec1_countries_l_english.yml
+++ b/localisation/dec1_countries_l_english.yml
@@ -30,6 +30,8 @@
  ITE_ADJ: "Italian"
  IMA: "Italian Merchant Alliance"
  IMA_ADJ: "Italian"
+ ISI: "Islamic State"
+ ISI_ADJ: "Daesh"
  LVE: "Lombardy-Venetia"
  LVE_ADJ: "Lombardo-Venetian"
  IBE: "Iberian Union"
