--- a/localisation/dec1_decisions_l_english.yml
+++ b/localisation/dec1_decisions_l_english.yml
@@ -153,14 +153,17 @@
  italian_empire_nation_title: "@ITE The Italian Empire"
  italian_empire_nation_desc: "The Italian Empire between 1936 and 1943, comprised the colonies, protectorates, concessions, dependencies and trust territories of the Kingdom of Italy.\n\nThe genesis of the Italian colonial empire was the purchase in 1869 of Assab Bay on the Red Sea by an Italian navigation company which intended to establish a coaling station at the time the Suez Canal was being opened to navigation."
 
+ islamic_state_nation_title: "@ISI The Islamic State"
+ islamic_state_nation_desc: "At the height of the Islamic State - also known as ISIS, ISIL, or Daesh held about a third of Syria and 40 percent of Iraq.\n\nThe rising threat took advantage of growing instability in Iraq and Syria to carry out attacks and bolster its ranks via military campaign and effective propeganda."
+
  jagiellonian_empire_nation_title: "@JGE Restore the Jagiellonian Empire"
  jagiellonian_empire_nation_desc: "The Jagiellonian dynasty was a royal dynasty, founded by Jogaila, the Grand Duke of Lithuania, who in 1386 was baptized as Władysław, married Queen regnant Jadwiga of Poland, and was crowned King of Poland as Władysław II Jagiełło.\n\nThe dynasty reigned in several Central European countries between the 14th and 16th centuries. Members of the dynasty were Kings of Poland (1386–1572), Grand Dukes of Lithuania (1377–1392 and 1440–1572), Kings of Hungary (1440–1444 and 1490–1526), and Kings of Bohemia (1471–1526)."
 
  jagiellonian_empire_nation_lithuania_title: "@JGE Lithuanian Empire"
- jagiellonian_empire_nation_lithuania_desc: "The Jagiellonian dynasty was a royal dynasty, founded by Jogaila, the Grand Duke of Lithuania."
+ jagiellonian_empire_nation_lithuania_desc: "The Jagiellonian dynasty was a royal dynasty, founded by Jogaila, the Grand Duke of Lithuania. Therefore we shall take the title in the name of Jogaila and found a new Jagiellonian Dynasty under the Lithuianian houses.\n\nThrough this campaign of conquest and integration we shall gain much prestige for the Royal House of Lithuania-Jagiellonia."
 
  arab_kingdom_nation_title: "@KAB The Arabian Sultunate"
- arab_kingdom_nation_desc: "The Sultunate of Arabia is a country encompassing the entirety of the Arabian Peninsula.\n\nIt is bordered by Iraq, Jordan and Egypt to the north, with the Red Sea to its west, the Persian Gulf to its east, and the Atlantic Ocean to the south, with its political capital in Mecca, and its Sunni Islam religious capital also Mecca."
+ arab_kingdom_nation_desc: "The Sultunate of Arabia is a country encompassing the entirety of the Arabian Peninsula.\n\nIt is bordered by Iraq, Jordan and Egypt to the north, with the Red Sea to its west, the Persian Gulf to its east.\n\nThe political capital is Mecca and the Sunni Islam religious center.\n\nThrough conquest for Allah in his name we shall found a great kingdom!"
 
  lombardy_venetia_nation_title: "@LVE Restore the Lombardy-Venetia Kingdom"
  lombardy_venetia_nation_desc: "The Kingdom of Lombardy–Venetia, commonly called the 'Lombardo-Venetian Kingdom', was a constituent land (crown land) of the Austrian Empire.\n\nIt was created in 1815 by resolution of the Congress of Vienna in recognition of the Austrian House of Habsburg-Lorraine's rights to Lombardy and the former Republic of Venice after the Napoleonic Kingdom of Italy, proclaimed in 1805, had collapsed."
