--- a/localisation/dec1_ideas_l_english.yml
+++ b/localisation/dec1_ideas_l_english.yml
@@ -669,24 +669,112 @@
  GEP_provoke_the_nobility_desc: "§RDescription Available in 4.1.0§!"
 
  GKR_ideas: "Goguryeo Ideas"
- GKR_ideas_start: ""
- GKR_ideas_bonus: ""
+ GKR_ideas_start: "Goguryeo Traditions"
+ GKR_ideas_bonus: "The Kingdom of Goguryeo"
+ GKR_united_korean_kingdom: "United Korean Kingdom"
+ GKR_united_korean_kingdom_desc: "§RDescription Available in 4.1.0§!"
+ GKR_east_asian_power: "East Asian Power"
+ GKR_east_asian_power_desc: "§RDescription Available in 4.1.0§!"
+ GKR_holy_king_of_the_east: "Holy King of the East"
+ GKR_holy_king_of_the_east_desc: "§RDescription Available in 4.1.0§!"
+ GKR_large_populace: "Large Populace"
+ GKR_large_populace_desc: "§RDescription Available in 4.1.0§!"
+ GKR_dongmyeong_of_goguryeo: "Dongmyeong of Goguryeo"
+ GKR_dongmyeong_of_goguryeo_desc: "§RDescription Available in 4.1.0§!"
+ GKR_religious_tolerance: "Religious Tolerance"
+ GKR_religious_tolerance_desc: "§RDescription Available in 4.1.0§!"
+ GKR_challange_the_chinese_emperors: "Challange the Chinese Emperors"
+ GKR_challange_the_chinese_emperors_desc: "§RDescription Available in 4.1.0§!"
 
  HEN_ideas: "Hesse-Nassau Ideas"
- HEN_ideas_start: ""
- HEN_ideas_bonus: ""
+ HEN_ideas_start: "Hesse-Nassau Traditions"
+ HEN_ideas_bonus: "Kingdom of Hesse-Nassau"
+ HEN_austro_prussian_war_claimant: "Austro-Prussian War Claimant"
+ HEN_austro_prussian_war_claimant_desc: "§RDescription Available in 4.1.0§!"
+ HEN_oberprasident: "Oberprasident of Hesse-Nassau"
+ HEN_oberprasident_desc: "§RDescription Available in 4.1.0§!"
+ HEN_origin_of_the_dutch_royal_house: "Dutch Royal House Origins"
+ HEN_origin_of_the_dutch_royal_house_desc: "§RDescription Available in 4.1.0§!"
+ HEN_provinces_of_prussia: "Provinces of Prussia"
+ HEN_provinces_of_prussia_desc: "§RDescription Available in 4.1.0§!"
+ HEN_state_control: "State Control"
+ HEN_state_control_desc: "§RDescription Available in 4.1.0§!"
+ HEN_trade_posts: "Trade Posts"
+ HEN_trade_posts_desc: "§RDescription Available in 4.1.0§!"
+ HEN_vote_of_waldeck: "Vote of Waldeck"
+ HEN_vote_of_waldeck_desc: "§RDescription Available in 4.1.0§!"
 
- HIM_ideas: "Himalayan Empire Ideas"
- HIM_ideas_start: ""
- HIM_ideas_bonus: ""
+ HIM_ideas: "Himalayan Ideas"
+ HIM_ideas_start: "Himalayan Traditions"
+ HIM_ideas_bonus: "The Himalayan Empire"
+ HIM_himalayan_routes: "Himalayan Trade Routes"
+ HIM_himalayan_routes_desc: "§RDescription Available in 4.1.0§!"
+ HIM_empire_of_the_mountains: "Empire of the Mountains"
+ HIM_empire_of_the_mountains_desc: "§RDescription Available in 4.1.0§!"
+ HIM_administrative_reform: "Administrative Reforms"
+ HIM_administrative_reform_desc: "§RDescription Available in 4.1.0§!"
+ HIM_improve_roadworks: "Improve Roadworks"
+ HIM_improve_roadworks_desc: "§RDescription Available in 4.1.0§!"
+ HIM_emperor_of_the_east: "The Eastern Emperor"
+ HIM_emperor_of_the_east_desc: "§RDescription Available in 4.1.0§!"
+ HIM_fort_locations: "Fort Strategic Location Placement"
+ HIM_fort_locations_desc: "§RDescription Available in 4.1.0§!"
+ HIM_silk_road_merchants: "Silk Road Merchants"
+ HIM_silk_road_merchants_desc: "§RDescription Available in 4.1.0§!"
 
- IBE_ideas: "Iberian Empire Ideas"
- IBE_ideas_start: ""
- IBE_ideas_bonus: ""
+ IBE_ideas: "Iberian Ideas"
+ IBE_ideas_start: "Iberian Traditions"
+ IBE_ideas_bonus: "The Iberian Union"
+ IBE_victorious_against_the_muslims: "Victorious Against the Muslims"
+ IBE_victorious_against_the_muslims_desc: "§RDescription Available in 4.1.0§!"
+ IBE_the_iberian_armada: "The Iberian Armada"
+ IBE_the_iberian_armada_desc: "§RDescription Available in 4.1.0§!"
+ IBE_colonial_administration: "Colonial Administration"
+ IBE_colonial_administration_desc: "§RDescription Available in 4.1.0§!"
+ IBE_european_theatre: "European Theatre"
+ IBE_european_theatre_desc: "§RDescription Available in 4.1.0§!"
+ IBE_monarchy_reformation: "Monarch Reformation"
+ IBE_monarchy_reformation_desc: "§RDescription Available in 4.1.0§!"
+ IBE_iberian_empire: "Iberian Empire"
+ IBE_iberian_empire_desc: "§RDescription Available in 4.1.0§!"
+ IBE_secure_dynastic_legacy: "Secure Dynastic Legacy"
+ IBE_secure_dynastic_legacy_desc: "§RDescription Available in 4.1.0§!"
+
+ ISI_ideas: "Islamic State Ideas"
+ ISI_ideas_start: "Islamic State Traditions"
+ ISI_ideas_bonus: "The Islamic State"
+ ISI_abu_bakr_al_baghdadi: "Abu Bakr al-Baghdadi"
+ ISI_abu_bakr_al_baghdadi_desc: "§RDescription Available in 4.1.0§!"
+ ISI_soldiers_harvest: "Harvest of the Soldiers"
+ ISI_soldiers_harvest_desc: "§RDescription Available in 4.1.0§!"
+ ISI_campaign_of_slaughter: "Campaign of Slaughter"
+ ISI_campaign_of_slaughter_desc: "§RDescription Available in 4.1.0§!"
+ ISI_desert_warfare: "Desert Warfare"
+ ISI_desert_warfare_desc: "§RDescription Available in 4.1.0§!"
+ ISI_embrace_islamic_law: "Embrace Islamic Law"
+ ISI_embrace_islamic_law_desc: "§RDescription Available in 4.1.0§!"
+ ISI_propeganda_campaign: "Propaganda Campaign"
+ ISI_propeganda_campaign_desc: "§RDescription Available in 4.1.0§!"
+ ISI_religious_warriors: "Religious Warriors"
+ ISI_religious_warriors_desc: "§RDescription Available in 4.1.0§!"
 
  ITE_ideas: "Italian Empire Ideas"
- ITE_ideas_start: ""
- ITE_ideas_bonus: ""
+ ITE_ideas_start: "Italian Empire Traditions"
+ ITE_ideas_bonus: "The Italian"
+ ITE_italian_revolution: "Risorgimento"
+ ITE_italian_revolution_desc: "§RDescription Available in 4.1.0§!"
+ ITE_unification_of_the_empire: "Unification of the Empire"
+ ITE_unification_of_the_empire_desc: "§RDescription Available in 4.1.0§!"
+ ITE_raised_tariff_tax: "Raised Tariff Taxation"
+ ITE_raised_tariff_tax_desc: "§RDescription Available in 4.1.0§!"
+ ITE_spread_of_italian_culture: "Spread of Italian Culture"
+ ITE_spread_of_italian_culture_desc: "§RDescription Available in 4.1.0§!"
+ ITE_regioni_d_italia: "Regioni d'Italia"
+ ITE_regioni_d_italia_desc: "§RDescription Available in 4.1.0§!"
+ ITE_la_leggenda_del_piave: "La Canzone del Piave"
+ ITE_la_leggenda_del_piave_desc: "§RDescription Available in 4.1.0§!"
+ ITE_succession_of_italy: "Succession of Italy"
+ ITE_succession_of_italy_desc: "§RDescription Available in 4.1.0§!"
 
  IMA_ideas: "Italian Merchant Alliance Ideas"
  IMA_ideas_start: ""
